# source-board-server-data-api

./: down.sql
.devcontainer/: devcontainer.json  install-diesel-orm.sh
crates/api-server-diesel-postgres/: Cargo.toml  diesel.toml
crates/api-server-diesel-postgres/migrations/2024-10-18-024215_create_auth/: down.sql  up.sql
crates/api-server-diesel-postgres/src/: main.rs  schema.rs
crates/api-server-diesel-postgres/src/github_user/: crud.rs  mod.rs  models.rs
crates/crate_diesel_orm_quickstart/: Cargo.toml  README.md  diesel.toml  sample.env
crates/crate_diesel_orm_quickstart/migrations/2024-10-16-025749_create_github_user/: down.sql  up.sql
crates/crate_diesel_orm_quickstart/src/: main.rs
crates/crate_diesel_orm_quickstart/src/utils/: github_user.rs  github_user.rs.old  mod.rs  models.rs  schema.rs
crates/crate_diesel_ormless_quickstart/: Cargo.toml
crates/crate_diesel_ormless_quickstart/src/: main.rs  schema.rs
http/: list_usrers.http  new_user.http
other/src/: main.rs
other/src/crud/: auth.rs  models.rs  schema.rs  user_repo.rs
